basic/demo-app/kubernetes/deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-service
      version: v1
  template:
    metadata:
      labels:
        app: demo-service
        version: v1
    spec:
      containers:
      - name: demo-service
        image: spring.io/demo-service-image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
