basic/demo-app/kubernetes/nodeport-service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-node
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30006
  selector:
    app: demo-service
