basic/demo-app/kubernetes/service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo-service
    version: v1
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: demo-service
